added exception with String.format for better